Connect search form to header

--- a/static/templates/fragments/header.html
+++ b/static/templates/fragments/header.html
@@ -23,6 +23,7 @@
                     </a>
                 </ul>
             </div>
+            {% include "./search_form.html" %}
             <div class="header-nav-backet_btn">
                 <div class="price-bckt-container">
                    <img src="{% static 'images/icons/Vector (2).png' %}">
